hphp/hack/test/typecheck/new_inference/eager_solve/array_get_good.php.like_types.exp
File "array_get_good.php", line 5, characters 13-14:
Typing error (Typing[4324])
File "array_get_good.php", line 4, characters 48-49:
Expected Tk
File "array_get_good.php", line 4, characters 59-60:
But got dynamic because it is an unenforceable type
